--- a/todo.org
+++ b/todo.org
@@ -27,106 +27,37 @@
 **** 选修课
 ** 毕设 (=10'=)
 * NPUOJ
-** FIXME
-*** TODO CE
-** Test
-*** Problem
-**** TODO ProblemData
-***** *
-*** Language
-***** *
-*** Submission
-**** DONE Create ( ForeignKey Error )
-     CLOSED: [2019-03-14 Thu 13:15]
-***** DONE ContestId = 20009 & problemId = "A"
-      CLOSED: [2019-03-14 Thu 13:16]
-**** DONE Delete
-     CLOSED: [2019-03-14 Thu 15:04]
-**** DONE Get
-     CLOSED: [2019-03-14 Thu 13:15]
-**** DONE GetAll
-     CLOSED: [2019-03-14 Thu 15:00]
-**** DONE GetByUser
-     CLOSED: [2019-03-14 Thu 15:02]
-**** DONE GetByContest
-     CLOSED: [2019-03-14 Thu 15:02]
-**** DONE Rejudge
-     CLOSED: [2019-03-14 Thu 15:04]
-**** TODO GetCode
-
-**** DONE Verify
-     CLOSED: [2019-03-14 Thu 15:03]
-*** Score
-**** DONE Get
-     CLOSED: [2019-03-14 Thu 15:54]
-**** DONE GetAll
-     CLOSED: [2019-03-14 Thu 15:54]
-**** DONE Update
-     CLOSED: [2019-03-14 Thu 17:14]
-**** DONE ReCalculateAll
-     CLOSED: [2019-03-14 Thu 16:45]
-*** Judgement
-**** DONE Create
-     CLOSED: [2019-03-14 Thu 17:58]
-
-**** DONE Get
-     CLOSED: [2019-03-14 Thu 16:32]
-**** DONE GetAll
-     CLOSED: [2019-03-14 Thu 16:32]
-**** DONE GetBySubmission
-     CLOSED: [2019-03-14 Thu 16:32]
-**** DONE Delete
-     CLOSED: [2019-03-14 Thu 16:32]
-**** DONE Update
-     CLOSED: [2019-03-14 Thu 16:54]
-
-* WORK
-** TODO 代理池
-** TODO 端口转发
-
+** DONE Problem <-> Type
+   CLOSED: [2019-03-29 Fri 14:57]
+** DONE GetSampleData
+   CLOSED: [2019-03-30 Sat 17:34]
+** DONE regist contest
+   CLOSED: [2019-03-27 Wed 18:20]
+** TODO CMS
+** DONE Ignore Submission
+   CLOSED: [2019-03-30 Sat 17:34]
+** TODO Unit Testing
+*** DONE ContestAppService
+    CLOSED: [2019-04-07 Sun 21:29]
+*** TODO JudgementAppService
+*** TODO ScoreAppService
+*** DONE LanguageAppService
+    CLOSED: [2019-04-08 Mon 22:39]
+*** DONE ProblemAppService
+    CLOSED: [2019-04-07 Sun 21:30]
+*** DONE TagAppService
+    CLOSED: [2019-04-07 Sun 21:30]
+*** DONE SubmissionAppService
+    CLOSED: [2019-04-08 Mon 22:33]
 * HOMEWORK
-** DONE 计算机组成原理
-   CLOSED: [2019-03-20 Wed 21:17]
-*** DONE 1.2
-    CLOSED: [2019-03-17 Sun 17:08]
-*** DONE 1.3
-    CLOSED: [2019-03-17 Sun 17:13]
-*** DONE 1.5
-    CLOSED: [2019-03-17 Sun 22:53]
-*** DONE 1.7
-    CLOSED: [2019-03-19 Tue 22:27]
-*** DONE 1.9
-    CLOSED: [2019-03-19 Tue 23:00]
-*** DONE 1.12
-    CLOSED: [2019-03-20 Wed 20:49]
-*** DONE 1.15
-    CLOSED: [2019-03-20 Wed 21:17]
 ** TODO 信号系统
-*** TODO 2019-3-22
-**** DONE 2.13
-     CLOSED: [2019-03-21 Thu 21:31]
-**** DONE 2.16
-     CLOSED: [2019-03-21 Thu 21:36]
-***** DONE 1
-      CLOSED: [2019-03-21 Thu 21:36]
-***** DONE 3
-      CLOSED: [2019-03-21 Thu 21:36]
-**** TODO 2.17
-**** TODO 2.19
-**** TODO 2.20
-***** TODO 2
-***** TODO 4
-*** TODO 2019-3-29
-**** TODO 2.21
-***** TODO d
-**** TODO 2.22
-**** TODO 2.26
-**** TODO 2.27
-**** TODO 2.28
+*** TODO 2019-4-6
+**** TODO 3.6
+**** TODO 3.8
+**** TODO 3.10
+**** TODO 3.13
+**** TODO 3.14
 ** TODO Englis
-*** TODO 批改网
+*** TODO 批改网 19-4-14
 *** TODO 听力
 *** TODO 长篇阅读
-
-** TODO 计算方法
-*** TODO 第三章
