--- a/todo.org
+++ b/todo.org
@@ -10,21 +10,20 @@
 *** 艺术素养 & 其余的 (=1' + 9'=)
 **** 网课 & 正常的
 ** 通修 (=5'=)
-*** 概率论 (=3'=)
-*** 英语 (=2'=)
+*** DOING 概率论 (=3'=)
+*** DOING 英语 (=2'=)
 ** 专业必修 (=14.5'=)
 *** 学科基础
-**** 操作系统 (=3.5'=)
-**** 网络原理 (=3'=)
-**** 数据库 (=2.5'=)
+**** DOING 操作系统 (=3.5'=)
+**** DOING 网络原理 (=3'=)
+**** DOING 数据库 (=2.5'=)
 *** 学科核心
 **** 编译原理 (=3'=)
 **** 软件工程 (=实验) (2'+0.5'=)
 ** 限选 (=16.5'=)
 *** 学科前沿课程 (=1'=)
 **** I, II (=0.5'+0.5'=)
-**** 专业选修 (=15.5'=)
-**** 选修课
+*** 专业选修 (=15.5'=)
 ** 毕设 (=10'=)
 * NPUOJ
 ** DONE Problem <-> Type
@@ -41,7 +40,6 @@
     CLOSED: [2019-04-07 Sun 21:29]
 *** DONE JudgementAppService
     CLOSED: [2019-04-10 Wed 17:12]
-*** TODO ScoreAppService
 *** DONE LanguageAppService
     CLOSED: [2019-04-08 Mon 22:39]
 *** DONE ProblemAppService
@@ -50,12 +48,3 @@
     CLOSED: [2019-04-07 Sun 21:30]
 *** DONE SubmissionAppService
     CLOSED: [2019-04-08 Mon 22:33]
-* NWPU.IP
-** Build database
-*** DONE public
-    CLOSED: [2019-04-25 Thu 21:32]
-* HOMEWORK
-** TODO 信号系统
-** TODO Englis
-*** TODO 听力
-*** TODO 长篇阅读
