--- a/todo.org
+++ b/todo.org
@@ -9,22 +9,19 @@
 *** 航空概论 (=0.5'=)
 *** 艺术素养 & 其余的 (=1' + 9'=)
 **** 网课 & 正常的
-** 通修 (=5'=)
-*** DOING 概率论 (=3'=)
-*** DOING 英语 (=2'=)
-** 专业必修 (=14.5'=)
-*** 学科基础
-**** DOING 操作系统 (=3.5'=)
-**** DOING 网络原理 (=3'=)
-**** DOING 数据库 (=2.5'=)
+** 专业必修 (=5.5'=)
 *** 学科核心
 **** 编译原理 (=3'=)
-**** 软件工程 (=实验) (2'+0.5'=)
-** 限选 (=16.5'=)
+**** 软件工程 & 实验 (2'+0.5'=)
+** 限选 (=12'=)
 *** 学科前沿课程 (=1'=)
 **** I, II (=0.5'+0.5'=)
-*** 专业选修 (=15.5'=)
+*** 专业选修 (=11'=)
+** 集中实践课程 (=5'=)
+*** 生产实习 (=3'=)
+*** 编译原理实验 (=2'=)
 ** 毕设 (=10'=)
+
 * NPUOJ
 ** DONE Problem <-> Type
    CLOSED: [2019-03-29 Fri 14:57]
